<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secco</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="company_intro">Company Introduction</string>
    <string name="product_intro">Product Introduction</string>
    <string name="enter_operation">Enter operation UI</string>
    <string name="room1">Room1</string>
    <string name="room2">Room2</string>
    <string name="kitchen">Kitchen</string>
    <string name="washroom">Washroom</string>
    <string name="parlour">Parlour</string>
    <string name="health_system">Health System</string>
    <string name="family_member_location">Family member location</string>
    <string name="top_light">Top light</string>
    <string name="wall_lamp">Wall lamp</string>
    <string name="curtain">Curtain</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="window_infrared">Window infrared</string>
    <string name="someone">Someone near the window</string>
    <string name="nobody">Nobody</string>
    <string name="tv">Televison</string>
    <string name="air_condition">Air-Condition</string>
    <string name="camera">Camera control</string>
    <string name="light_control">Light control</string>
    <string name="door_control"> Door control</string>
    <string name="smoke_alarm">Smoke Alarm</string>
    <string name="gas_alarm">Gas Alarm</string>
    <string name="control_center">Control Center</string>
    
    <!-- Family member location related -->
    <string name="family_member_name">Name:</string>
    <string name="family_member_coordinate">Coordinate:</string>
    <string name="family_member_address">Location:</string>
    <string name="family_member_update_time">Update time:</string>
    
    
   

</resources>
