<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

    

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1" >

        

       <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" >

			<ImageView
			    android:id="@+id/imageView1"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:background="@color/NavajoWhite"
			    android:src="@drawable/ic_launcher" />
			
             <LinearLayout
                 android:id="@+id/FM1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:background="@color/NavajoWhite"
                 android:orientation="vertical"
                 android:padding="20dp" >

                 <TextView
                     android:id="@+id/FM_name1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/family_member_name" />

                 <TextView
                     android:id="@+id/FM_coor1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/family_member_coordinate" />

                 <TextView
                     android:id="@+id/FM_update_time1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/family_member_update_time" />

                 <TextView
                     android:id="@+id/FM_location1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/family_member_address" />

             </LinearLayout>

            

         </TableRow>

       

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/NavajoWhite"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/NavajoWhite"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/TextView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_name" />

                <TextView
                    android:id="@+id/TextView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_coordinate" />

                <TextView
                    android:id="@+id/TextView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_update_time" />

                <TextView
                    android:id="@+id/TextView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_address" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/NavajoWhite"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/NavajoWhite"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_name" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_coordinate" />

                <TextView
                    android:id="@+id/TextView08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_update_time" />

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_address" />

            </LinearLayout>
        </TableRow><TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/NavajoWhite"
                android:src="@drawable/ic_launcher" />

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:background="@color/NavajoWhite" android:orientation="vertical" android:padding="20dp">

                <TextView android:id="@+id/TextView21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_name" />

                <TextView android:id="@+id/TextView23" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_coordinate" />

                <TextView android:id="@+id/TextView17" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_update_time" />

                <TextView android:id="@+id/TextView19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_address" />
            </LinearLayout>
        </TableRow><TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/ImageView04"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/NavajoWhite"
                android:src="@drawable/ic_launcher" />

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:background="@color/NavajoWhite" android:orientation="vertical" android:padding="20dp">

            <TextView android:id="@+id/TextView37" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_name" />

            <TextView android:id="@+id/TextView39" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_coordinate" />

            <TextView android:id="@+id/TextView33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_update_time" />

            <TextView android:id="@+id/TextView35" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family_member_address" />
        </LinearLayout>
    </TableRow>
    
        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/ImageView05"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/NavajoWhite"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/NavajoWhite"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_name" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_coordinate" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_update_time" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_member_address" />
            </LinearLayout>
        </TableRow>

         

    </TableLayout>
	 </ScrollView>
</LinearLayout>